Fixed #1 issue and insert part update.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,9 @@ Package: OmopVocaManager
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Itblock
+Maintainer: The package maintainer <wnsuddlsla@gmail.com>
+Description: Upload vocabulary files to DBMS.
+License: Apache 2.0
 Encoding: UTF-8
 LazyData: true
